<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2b2b2b">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/size_dp_7"
        android:layout_marginTop="@dimen/size_dp_50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hues"
            android:textSize="@dimen/text_size_sp_16"
            android:layout_marginRight="@dimen/size_dp_3"
            android:textColor="@android:color/white"/>

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/new_hues_seekbar"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            app:isb_indicator_color="@android:color/holo_red_light"
            app:isb_indicator_text_size="@dimen/text_size_sp_16"
            app:isb_indicator_type="rectangle"
            app:isb_max="360"
            app:isb_min="0"
            app:isb_show_indicator="false"
            app:isb_thumb_color="@android:color/holo_red_light"
            app:isb_thumb_width="@dimen/size_dp_15"
            app:isb_track_progress_bar_color="@android:color/holo_red_light" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/new_huesValue"
            android:textSize="@dimen/text_size_sp_16"
            android:layout_marginRight="@dimen/size_dp_5"
            android:gravity="center_vertical|left"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/size_dp_7"
        android:layout_marginTop="@dimen/size_dp_50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturation"
            android:textSize="@dimen/text_size_sp_16"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/size_dp_3"/>
        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/new_saturation_seekbar"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            app:isb_indicator_type="rectangle"
            app:isb_indicator_text_size="@dimen/text_size_sp_16"
            app:isb_thumb_width="@dimen/size_dp_15"
            app:isb_max="100"
            app:isb_min="1"
            app:isb_show_indicator="false"
            app:isb_indicator_color="@android:color/holo_green_light"
            app:isb_thumb_color="@android:color/holo_green_light"
            app:isb_track_progress_bar_color="@android:color/holo_green_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/new_saturationValue"
            android:textSize="@dimen/text_size_sp_16"
            android:layout_marginRight="@dimen/size_dp_5"
            android:gravity="center_vertical|left"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/size_dp_7"
        android:layout_marginTop="@dimen/size_dp_50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:textSize="@dimen/text_size_sp_16"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/size_dp_3"/>
        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/new_brightness_seekbar"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            app:isb_indicator_type="rectangle"
            app:isb_indicator_text_size="@dimen/text_size_sp_16"
            app:isb_thumb_width="@dimen/size_dp_15"
            app:isb_max="100"
            app:isb_min="1"
            app:isb_show_indicator="false"
            app:isb_indicator_color="@android:color/holo_blue_light"
            app:isb_thumb_color="@android:color/holo_blue_light"
            app:isb_track_progress_bar_color="@android:color/holo_blue_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/new_brightnessValue"
            android:textSize="@dimen/text_size_sp_16"
            android:layout_marginRight="@dimen/size_dp_5"
            android:gravity="center_vertical|left"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/hsiStyleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/size_dp_7"
        android:layout_marginTop="@dimen/size_dp_50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightEffect"
            android:textSize="@dimen/text_size_sp_16"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/size_dp_3"/>
        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/new_hsiEffect_seekbar"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            app:isb_indicator_type="rectangle"
            app:isb_indicator_text_size="@dimen/text_size_sp_16"
            app:isb_tick_num="1"
            app:isb_thumb_width="@dimen/size_dp_15"
            app:isb_max="59"
            app:isb_min="0"
            app:isb_show_indicator="false"
            app:isb_indicator_color="@android:color/holo_blue_light"
            app:isb_thumb_color="@android:color/holo_blue_light"
            app:isb_track_progress_bar_color="@android:color/holo_blue_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/new_hisEffectValue"
            android:textSize="@dimen/text_size_sp_16"
            android:layout_marginRight="@dimen/size_dp_5"
            android:gravity="center_vertical|left"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/speedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/size_dp_7"
        android:layout_marginTop="@dimen/size_dp_50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="@dimen/text_size_sp_16"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/size_dp_3"/>
        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/new_speed_seekbar"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            app:isb_indicator_type="rectangle"
            app:isb_indicator_text_size="@dimen/text_size_sp_16"
            app:isb_thumb_width="@dimen/size_dp_15"
            app:isb_max="20"
            app:isb_min="1"
            app:isb_show_indicator="false"
            app:isb_indicator_color="@android:color/holo_blue_light"
            app:isb_thumb_color="@android:color/holo_blue_light"
            app:isb_track_progress_bar_color="@android:color/holo_blue_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/new_speedValue"
            android:textSize="@dimen/text_size_sp_16"
            android:layout_marginRight="@dimen/size_dp_5"
            android:gravity="center_vertical|left"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/color_picker_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/blue_200">
        <com.phy.app.views.ColorView
            android:id="@+id/color_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.phy.app.views.ColorView>
    </LinearLayout>

</LinearLayout>